# multimodal-hybrid-parsing

./: README.md  pyproject.toml
models/: model_old.py
models/v0.1.0/: model.py
multimodal_hybrid_parsing/: __init__.py  heuristic_parser.py  hybrid_parser.py  page_images.py
tests/: script_test.ipynb  script_test_v2.ipynb  script_test_v3.ipynb  test.ipynb  test_heuristic_parser.ipynb  test_heuristic_parser.py  test_heuristic_parser_cpu.py  test_heuristic_parser_cuda.py  test_heuristic_parser_cuda_gpt4omini.py  test_heuristic_parser_cuda_img_desc.py  test_heuristic_parser_cuda_img_desc_granite.py  test_heuristic_parser_cuda_img_desc_granite_half_scale.py  test_heuristic_parser_cuda_img_desc_smolVlm.py  test_hybrid_parser.py  test_page_images.py  visualize_stats.py  visualize_stats_filesize.py  visualize_stats_full.py  visualize_stats_pages.py
tests/output/markdown/: 1312.6114v11.md  aapl-20240629.md
tests/output/markdown/heuristic/: [2-page-table] Understanding RAG.md  [complex-chart] generative-ai-global-research-report-113914.md  [form-data] uniform_residential_loan_application.md  [handwritten] Deloitte.md  [low-quality-scan]cia-rdp74-00005r000200080057-3 (dragged).md  [maths-and-diagrams] ey-gen-ai-report.md  [red-line-doc] Dummy employee contract.md  (+3 more)
tests/stats/: heuristic_parsing_cpu_stats.json  heuristic_parsing_cuda_img_desc_granite_stats.json  heuristic_parsing_cuda_img_desc_smolVlm_stats.json  heuristic_parsing_cuda_stats.json  heuristic_parsing_times.json  hybrid_parsing_times.json  instill_hybrid_pipeline_stats.json  pdf_plumber_stats.json
(+50 files in other folders)
